--- a/theme/css/backdrop.css
+++ b/theme/css/backdrop.css
@@ -2707,7 +2707,7 @@ select {
     border-color: #148c52;
     color: #FFFFFF; }
   .alert-box.alert {
-    background-color: #71030c;
+    background-color: #207078;
     border-color: #61030a;
     color: #FFFFFF; }
   .alert-box.secondary {
@@ -3095,7 +3095,7 @@ button, .button {
     button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
       color: #FFFFFF; }
   button.alert, .button.alert {
-    background-color: #71030c;
+    background-color: #207078;
     border-color: #5a020a;
     color: #FFFFFF; }
     button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
@@ -3190,7 +3190,7 @@ button, .button {
       button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
         background-color: #17a35f; }
     button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[disabled].alert {
-      background-color: #71030c;
+      background-color: #207078;
       border-color: #5a020a;
       color: #FFFFFF;
       cursor: default;
@@ -3201,7 +3201,7 @@ button, .button {
       button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
         color: #FFFFFF; }
       button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
-        background-color: #71030c; }
+        background-color: #207078; }
     button.disabled.warning, button[disabled].warning, .button.disabled.warning, .button[disabled].warning {
       background-color: #a35117;
       border-color: #824112;
@@ -4345,7 +4345,7 @@ fieldset {
   font-size: 0.75rem;
   font-weight: normal;
   font-style: italic;
-  background: #71030c;
+  background: #207078;
   color: #FFFFFF; }
 [data-abide] span.error, [data-abide] small.error {
   display: none; }
@@ -4358,7 +4358,7 @@ span.error, small.error {
   font-size: 0.75rem;
   font-weight: normal;
   font-style: italic;
-  background: #71030c;
+  background: #207078;
   color: #FFFFFF; }
 
 .error input, .error textarea, .error select {
@@ -4366,7 +4366,7 @@ span.error, small.error {
 .error input[type="checkbox"], .error input[type="radio"] {
   margin-bottom: 1rem; }
 .error label, .error label.error {
-  color: #71030c; }
+  color: #207078; }
 .error small.error {
   display: block;
   padding: 0.375rem 0.5625rem 0.5625rem;
@@ -4375,7 +4375,7 @@ span.error, small.error {
   font-size: 0.75rem;
   font-weight: normal;
   font-style: italic;
-  background: #71030c;
+  background: #207078;
   color: #FFFFFF; }
 .error > label > small {
   color: #676767;
@@ -4393,7 +4393,7 @@ input.error, textarea.error, select.error {
   margin-bottom: 0; }
 
 label.error {
-  color: #71030c; }
+  color: #207078; }
 
 .icon-bar {
   width: 100%;
@@ -4752,7 +4752,7 @@ label.error {
   .label.round {
     border-radius: 1000px; }
   .label.alert {
-    background-color: #71030c;
+    background-color: #207078;
     color: #FFFFFF; }
   .label.warning {
     background-color: #a35117;
@@ -5168,7 +5168,7 @@ ul.pagination {
     height: 100%;
     display: block; }
   .progress.alert .meter {
-    background: #71030c;
+    background: #207078;
     height: 100%;
     display: block; }
   .progress.radius {
@@ -5842,7 +5842,7 @@ meta.foundation-mq-topbar {
 /* Wrapped around .top-bar to contain to grid width */
 .contain-to-grid {
   width: 100%;
-  background: #71030c; }
+  background: #207078; }
   .contain-to-grid .top-bar {
     margin-bottom: 0; }
 
@@ -5870,7 +5870,7 @@ meta.foundation-mq-topbar {
   height: 2.8125rem;
   line-height: 2.8125rem;
   position: relative;
-  background: #71030c;
+  background: #207078;
   margin-bottom: 0; }
   .top-bar ul {
     margin-bottom: 0;
@@ -5949,7 +5949,7 @@ meta.foundation-mq-topbar {
     height: auto;
     background: transparent; }
     .top-bar.expanded .title-area {
-      background: #71030c; }
+      background: #207078; }
     .top-bar.expanded .toggle-topbar a {
       color: #888888; }
       .top-bar.expanded .toggle-topbar a span::after {
@@ -6012,7 +6012,7 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li > a.button.success:hover, .top-bar-section ul li > a.button.success:focus {
           color: #FFFFFF; }
       .top-bar-section ul li > a.button.alert {
-        background-color: #71030c;
+        background-color: #207078;
         border-color: #5a020a;
         color: #FFFFFF; }
         .top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
@@ -6055,7 +6055,7 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li > button.success:hover, .top-bar-section ul li > button.success:focus {
           color: #FFFFFF; }
       .top-bar-section ul li > button.alert {
-        background-color: #71030c;
+        background-color: #207078;
         border-color: #5a020a;
         color: #FFFFFF; }
         .top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
@@ -6075,7 +6075,7 @@ meta.foundation-mq-topbar {
       background: #a70412;
       color: #FFFFFF; }
     .top-bar-section ul li.active > a {
-      background: #71030c;
+      background: #207078;
       color: #FFFFFF; }
       .top-bar-section ul li.active > a:hover {
         background: #a70412;
@@ -6156,7 +6156,7 @@ meta.foundation-mq-topbar {
 
 @media only screen and (min-width:40.063em) {
   .top-bar {
-    background: #71030c;
+    background: #207078;
     overflow: visible; }
     .top-bar:before, .top-bar:after {
       content: " ";
@@ -6175,7 +6175,7 @@ meta.foundation-mq-topbar {
       height: 1.75rem;
       top: 0.53125rem; }
     .top-bar.expanded {
-      background: #71030c; }
+      background: #207078; }
   .contain-to-grid .top-bar {
     max-width: 62.5rem;
     margin: 0 auto;
@@ -6198,7 +6198,7 @@ meta.foundation-mq-topbar {
     .top-bar-section li:not(.has-form) a:not(.button) {
       padding: 0 0.9375rem;
       line-height: 2.8125rem;
-      background: #71030c; }
+      background: #207078; }
       .top-bar-section li:not(.has-form) a:not(.button):hover {
         background-color: #a70412;
         background: #a70412; }
@@ -6206,7 +6206,7 @@ meta.foundation-mq-topbar {
       padding: 0 0.9375rem;
       line-height: 2.8125rem;
       color: #FFFFFF;
-      background: #71030c; }
+      background: #207078; }
       .top-bar-section li.active:not(.has-form) a:not(.button):hover {
         background: #a70412;
         color: #FFFFFF; }
@@ -6286,7 +6286,7 @@ meta.foundation-mq-topbar {
       height: 2.8125rem;
       width: 0; }
     .top-bar-section .has-form {
-      background: #71030c;
+      background: #207078;
       padding: 0 0.9375rem;
       height: 2.8125rem; }
     .top-bar-section .right li .dropdown {
@@ -6304,7 +6304,7 @@ meta.foundation-mq-topbar {
     background: #a70412;
     color: #FFFFFF; }
   .no-js .top-bar-section ul li:active > a {
-    background: #71030c;
+    background: #207078;
     color: #FFFFFF; }
   .no-js .top-bar-section .has-dropdown:hover > .dropdown {
     display: block;
@@ -7444,7 +7444,7 @@ footer {
   margin-top: 0;
   margin-bottom: 0;
   max-width: 62.5rem;
-  border-top: 0.25rem solid #71030c;
+  border-top: 0.25rem solid #207078;
   background: #EFEFEF;
   min-width: 100%;
   /*
