--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="{{AUTHOR}}" />
         <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-        
+
         {% block description %}
         <meta name="description" content="{{ SITESUBTITLE }}" />
         <meta name="keywords" content="Blog{% for keyword in BLOGKEYWORDS %} {{ keyword }}{% endfor %} "/>
@@ -49,7 +49,7 @@
 
         {% if DISQUS_SITENAME %}
         <script type="text/javascript">
-            var disqus_shortname = '{{ DISQUS_SITENAME }}'; 
+            var disqus_shortname = '{{ DISQUS_SITENAME }}';
 
             (function () {
                 var s = document.createElement('script'); s.async = true;
@@ -60,7 +60,7 @@
         </script>
         {% endif %}
     </head>
-      
+
 
     <body>
         <div class="master-row">
@@ -91,7 +91,7 @@
                         <hr>
                     </div>
                 </div>
-            
+
                 <div id="contents">
                 {% block content %}
                     <div class="row">
@@ -103,7 +103,7 @@
                     {% include 'footer.html' %}
                 </footer>
             </div>
-            
+
             <div class="image-pane main-content" style="background: url('{{ BACKDROP_IMAGE|replace('{filename}',SITEURL)|replace('|filename|',SITEURL) }}'); background-size:cover; background-position: right;">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
@@ -138,7 +138,7 @@
 
                     <div class="small-12 medium-4  large-12 columns link-list">
                     {% if LINKS %}
-                        <h5 class='text-center'>Links</h5>
+                        <h5 class='text-center'>Sponsors &amp; Partners</h5>
                         <ul class="inline-center">
                         {% for name, url in LINKS %}
                             <li><a href="{{ url }}">{{ name }}</a></li>
@@ -166,18 +166,18 @@
                </div>
             </div>
         </div>
-        
-        
+
+
         <div class="row">
             <footer class="hide-for-large-up">
                 {% include 'footer.html' %}
             </footer>
         </div>
-        
-        
+
+
         <script src="{{ SITEURL }}/theme/js/jquery.min.js"></script>
         <script src="{{ SITEURL }}/theme/js/foundation.min.js"></script>
         <script src="{{ SITEURL }}/theme/js/app.js"></script>
     </body>
-  
+
 </html>
