--- a/theme/css/backdrop.css
+++ b/theme/css/backdrop.css
@@ -7428,7 +7428,7 @@ th.hide-for-touch {
   padding-bottom: 1.25rem;
   overflow: hidden; }
   div {
-    font-size:  1.5rem; }
+    font-size:  1rem !important; }
   .about-me h5 {
     margin-top: 0; }
 
