--- a/themes/backdrop/templates/category.html
+++ b/themes/backdrop/templates/category.html
@@ -5,7 +5,7 @@
 {% import 'macros.html' as macros %}
 <div class="row">
     <div class="small-12 columns">
-        <h2>Articles in category &ldquo;{{category}}&rdquo;</h2>
+        <h2>{{category}}</h2>
         {{ macros.page_list(articles_page, articles_paginator.num_pages, page_name, SITEURL, disqus=DISQUS_SITENAME) }}
     </div>
 </div>
