styling, footer, sponsors page

--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -74,7 +74,7 @@
                     <section class="top-bar-section">
                         <ul class="left">
                         <li>
-                            <a href="http://dragonsprint.com"><img src="/theme/images/logo.jpg" /></a>
+                            <a href="http://dragonsprint.com"><img src="/theme/images/logo.png" /></a>
                         </li>
                         {% for p in pages %}
                             <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
