--- a/themes/backdrop/templates/footer.html
+++ b/themes/backdrop/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="small-6 medium-3 columns">
+<!--     <div class="small-6 medium-3 columns">
         <ul class="left-nav">
             <li><a href="{{ SITEURL }}">Home &nbsp;<i class="fa fa-home fa-fw"></i></a></li>
             <li><a href="{{ SITEURL }}/categories.html">Categories &nbsp;<i class="fa fa-folder-open fa-fw"></i></a></li>
@@ -18,8 +18,8 @@
         {% endif %}
             <li><a href="{{ SITEURL }}/archives.html"><i class="fa fa-archive fa-fw"></i>&nbsp; Archives</a></li>
         </ul>
-    </div>
-    <div class="small-12 medium-6 medium-pull-3 columns text-center">
+    </div> -->
+<!--     <div class="small-12 medium-6 medium-pull-3 columns text-center">
     {% if tags %}
         <p class="tag-cloud">
             <a href="{{ SITEURL }}/tags.html"><i class="fa fa-tags"></i>&nbsp;Tags:</a>&nbsp;&nbsp;
@@ -29,7 +29,7 @@
             &nbsp;&hellip;
         </p>
     {% endif %}
-    </div>
+    </div> -->
     <div class="small-12 columns sub-footer">
         <hr>
         <div class="small-12 medium-6 columns">
