add Join Us button to sidebar

--- a/themes/backdrop/templates/index.html
+++ b/themes/backdrop/templates/index.html
@@ -8,7 +8,16 @@
         <p><img src="theme/images/big_logo.png" /></p>
         <p>The sprint is <strong>free</strong> to attend for everyone! <a class="reference external" href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.</p>
         <p>Use the menu at the top to read more about the event.</p>
-        <p>Here's some recent content:</p>
+        <p>You can join/register for the sprint by:
+        <ul>
+            <li>filling out the <a href="https://www.surveymonkey.com/r/DQ5C8T2">Signup form</a>,</li>
+            <li>OR joining the <a href="https://groups.google.com/d/forum/dragonsprint">dragonsprint@googlegroups.com</a> mailing list and saying Hi!,</li>
+            <li>OR creating your own "sprinter page" by <a href="https://github.com/niteoweb/dragonsprint.com/tree/master/content">submitting a Pull Request</a>.</li>
+        </ul>
+
+        </p>
+
+        <p>Lastly, here's some recent content:</p>
     </div>
     {% endif %}
     {% if articles|length %}
