--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -150,6 +150,12 @@
                     {% endif %}
                     </div>
 
+                    <div class="small-12 medium-4  large-12 columns link-list" style="text-align: center">
+                        <br /><br />
+                        <a style="border-color: lightgray; border: 1px solid;" href="https://www.surveymonkey.com/r/DQ5C8T2" class="large button">Join Us!</a>
+                    </div>
+
+
 <!--
                     <div class="small-12 medium-3 large-12 columns">
                     {% if GITHUB_ACTIVITY_FEED %}
