--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -18,9 +18,9 @@
             #main-content {display:table;height:100%}
         </style>
         <![endif]-->
-        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/backdrop.css" />
-        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" />
-        <script src="{{ SITEURL }}/theme/js/modernizr.js"></script>
+        <link rel="stylesheet" href="/theme/css/backdrop.css" />
+        <link rel="stylesheet" href="/theme/css/pygments.css" />
+        <script src="/theme/js/modernizr.js"></script>
 
         {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Full Atom Feed" />
@@ -178,9 +178,9 @@
         </div>
 
 
-        <script src="{{ SITEURL }}/theme/js/jquery.min.js"></script>
-        <script src="{{ SITEURL }}/theme/js/foundation.min.js"></script>
-        <script src="{{ SITEURL }}/theme/js/app.js"></script>
+        <script src="/theme/js/jquery.min.js"></script>
+        <script src="/theme/js/foundation.min.js"></script>
+        <script src="/theme/js/app.js"></script>
     </body>
 
 </html>
