--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -147,6 +147,8 @@
                             <li><a href="{{ url }}">{{ name }}</a></li>
                         {% endfor %}
                         </ul>
+                        <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
                     {% endif %}
                     </div>
 
