add logos for P2L Tech and Plone Foundation
Also add links for existing logos.

--- a/themes/backdrop/static/css/backdrop.css
+++ b/themes/backdrop/static/css/backdrop.css
@@ -7917,3 +7917,7 @@ img.align-center {
 .image-pane.main-content .row a.large.button:hover{
     background-color: #40a070;
 }
+
+#logo-list a:hover:not(.button) {
+  background: none;
+}
