--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -147,8 +147,28 @@
                             <li><a href="{{ url }}">{{ name }}</a></li>
                         {% endfor %}
                         </ul>
-                        <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
-                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
+                        <ul id="logo-list" class="inline-center">
+                          <li>
+                            <a href="https://www.jetbrains.com/">
+                              <img src="/theme/images/jetbrains.png" />
+                            </a>
+                          </li>
+                          <li>
+                            <a href="https://www.python.org/psf/">
+                              <img src="/theme/images/psf.png" />
+                            </a>
+                          </li>
+                          <li>
+                            <a href="http://p2l.tech/">
+                              <img src="/theme/images/p2ltech.png" />
+                            </a>
+                          </li>
+                          <li>
+                            <a href="https://plone.org/">
+                              <img src="/theme/images/plone.png" />
+                            </a>
+                          </li>
+                        </ul>
                     {% endif %}
                     </div>
 
