--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -63,7 +63,7 @@
 
 
     <body>
-        <div class="master-row">
+        <div class="master-row" style="background: url('{{ BACKDROP_IMAGE|replace('{filename}',SITEURL)|replace('|filename|',SITEURL) }}'); background-size:cover; background-position: right; background-attachment: fixed;">
 
             <div class="content-pane main-content">
                 <nav class="top-bar" data-topbar role="navigation">
@@ -107,7 +107,7 @@
                 </footer>
             </div>
 
-            <div class="image-pane main-content" style="background: url('{{ BACKDROP_IMAGE|replace('{filename}',SITEURL)|replace('|filename|',SITEURL) }}'); background-size:cover; background-position: right;">
+            <div class="image-pane main-content">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
                     {% if SITE_DESCRIPTION or EMAIL or SOCIAL %}
@@ -141,7 +141,7 @@
 
                     <div class="small-12 medium-4  large-12 columns link-list">
                     {% if LINKS %}
-                        <h5 class='text-center'>Sponsors &amp; Partners</h5>
+                        <h3 class='text-center'>Sponsors &amp; Partners</h3>
                         <ul class="inline-center">
                         {% for name, url in LINKS %}
                             <li><a href="{{ url }}">{{ name }}</a></li>
@@ -149,23 +149,28 @@
                         </ul>
                         <ul id="logo-list" class="inline-center">
                           <li>
-                            <a href="https://www.jetbrains.com/">
+                            <a target="_blank" href="https://www.jetbrains.com/">
                               <img src="/theme/images/jetbrains.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="https://www.python.org/psf/">
+                            <a target="_blank" href="https://www.python.org/psf/">
                               <img src="/theme/images/psf.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="http://p2l.tech/">
+                            <a target="_blank" href="http://p2l.tech/">
                               <img src="/theme/images/p2ltech.png" />
                             </a>
                           </li>
                           <li>
-                            <a href="https://plone.org/">
+                            <a target="_blank" href="https://plone.org/">
                               <img src="/theme/images/plone.png" />
+                            </a>
+                          </li>
+                          <li>
+                            <a target="_blank" href="https://termitnjak.com/">
+                              <img src="/theme/images/termitnjak.png" />
                             </a>
                           </li>
                         </ul>
