--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -168,6 +168,11 @@
                               <img src="/theme/images/plone.png" />
                             </a>
                           </li>
+                          <li>
+                            <a href="https://jazkarta.com/">
+                              <img src="/theme/images/jazkarta.png" />
+                            </a>
+                          </li>
                         </ul>
                     {% endif %}
                     </div>
