--- a/theme/css/backdrop.css
+++ b/theme/css/backdrop.css
@@ -6442,7 +6442,7 @@ div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, t
 
 /* Default Link Styles */
 a {
-  color: 252525;
+  color: #6F8F8F;
   text-decoration: none;
   line-height: inherit;
   }
@@ -7486,7 +7486,7 @@ footer {
   margin-bottom: 0;
   max-width: 62.5rem;
   max-width: none;
-  height: 100%;
+  /*height: 100%;*/
   /*
     z-index: -10000;
 */ }
@@ -7503,14 +7503,16 @@ footer {
     z-index: 10;
     box-shadow: 0 0 0.625rem 0.125rem #333333;
     position: relative;
-    min-height: 100%; }
+    min-height: 100%; 
+    background: white;}
     @media only screen and (min-width:64.063em) {
       .master-row .content-pane {
         padding-left: 0;
         padding-right: 0;
         width: 66.6666666667%;
         float: left;
-        min-height: 100%; } }
+        min-height: 100%; 
+        background: white;} }
     .master-row .content-pane .row {
       margin-right: 0;
       min-width: 75%; }
@@ -7559,10 +7561,10 @@ footer {
         width: 33.3333333333%;
         float: left;
         min-height: auto;
-        position: fixed;
+        /*position: fixed;*/
         padding-left: 0.3125rem;
         right: 0;
-        height: 100%; }
+        /*height: 100%;*/ }
         .master-row .image-pane .row {
           max-width: 33.125rem;
           margin-left: 0;
