add NW logo, shorten sidebar text

--- a/themes/backdrop/templates/base.html
+++ b/themes/backdrop/templates/base.html
@@ -178,6 +178,11 @@
                               <img src="/theme/images/termitnjak.png" />
                             </a>
                           </li>
+                          <li>
+                            <a target="_blank" href="http://www.niteoweb.com/">
+                              <img src="/theme/images/niteoweb.png" />
+                            </a>
+                          </li>
                         </ul>
                     {% endif %}
                     </div>
